<resources>
    <string name="app_name">City</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newyork1">Newyork1</string>
    <string name="newyork2">Newyork2</string>
    <string name="newyork3">Newyork3</string>
    <string name="newyork4">Newyork4</string>
    <string name="newyork5">Newyork5</string>

</resources>
