<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sagar.city.main">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/newyork1"
        app:srcCompat="@drawable/city1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/newyork2"
        app:srcCompat="@drawable/city2"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_toEndOf="@+id/imageView1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/newyork3"
        app:srcCompat="@drawable/city3"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/newyork4"
        app:srcCompat="@drawable/city4"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/newyork5"
        app:srcCompat="@drawable/city5"
        android:layout_below="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4" />

</RelativeLayout>
